# ComfyUI-Size-Selection

./: README.md  __init__.py  pyproject.toml  requirements.txt
py/: size_selection.py
web/: size_selection.js
workflows/: Size-Selection_example.json
