[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-size-selection"
version = "1.0"
description = "ComfyUI custom node for selecting standard image resolutions with an interactive graphical UI. Outputs width and height for use with any downstream node."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "穿山阅海" }
]
keywords = ["comfyui", "custom-node", "resolution", "image-size", "stable-diffusion"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]
requires-python = ">=3.9"

# 无第三方运行时依赖，仅使用 Python 标准库（math）
# ComfyUI 运行环境（torch、numpy 等）由宿主程序提供
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage      = "https://github.com/xujianjian2004/ComfyUI-Size-Selection"
"Bug Tracker" = "https://github.com/xujianjian2004/ComfyUI-Size-Selection/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["py*"]

[tool.setuptools.package-data]
"*" = ["web/*.js", "workflows/*.json"]
